--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,15 @@
   width: 100%;
   height: 90vh;
   display: flex;
+  background-color: blue;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .board {
-  width: 400px;
-  height: 400px; /* Adjusted height for a more square-like board */
+  width: 300px;
+  height: 300px; /* Adjusted height for a more square-like board */
   display: grid; /* Using CSS Grid for better layout */
   grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
   grid-template-rows: repeat(3, 1fr); /* 3 equal rows */
