--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 90vh;
   display: flex;
-  background-color: blue;
+  background-color: rgba(255, 0, 0, 0.466);
   flex-direction: column;
   justify-content: center;
   align-items: center;
